; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/extr_isl29003.c_isl29003_get_power_state.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/extr_isl29003.c_isl29003_get_power_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }
%struct.isl29003_data = type { i32* }

@ISL29003_REG_COMMAND = common dso_local global i64 0, align 8
@ISL29003_ADC_PD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*)* @isl29003_get_power_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @isl29003_get_power_state(%struct.i2c_client* %0) #0 {
  %2 = alloca %struct.i2c_client*, align 8
  %3 = alloca %struct.isl29003_data*, align 8
  %4 = alloca i32, align 4
  store %struct.i2c_client* %0, %struct.i2c_client** %2, align 8
  %5 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %6 = call %struct.isl29003_data* @i2c_get_clientdata(%struct.i2c_client* %5)
  store %struct.isl29003_data* %6, %struct.isl29003_data** %3, align 8
  %7 = load %struct.isl29003_data*, %struct.isl29003_data** %3, align 8
  %8 = getelementptr inbounds %struct.isl29003_data, %struct.isl29003_data* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = load i64, i64* @ISL29003_REG_COMMAND, align 8
  %11 = getelementptr inbounds i32, i32* %9, i64 %10
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = xor i32 %13, -1
  %15 = load i32, i32* @ISL29003_ADC_PD, align 4
  %16 = and i32 %14, %15
  ret i32 %16
}

declare dso_local %struct.isl29003_data* @i2c_get_clientdata(%struct.i2c_client*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
